Code Changes for send notification and MSS.

--- a/WebContent/resources/i18n/messages_en.properties
+++ b/WebContent/resources/i18n/messages_en.properties
@@ -61,9 +61,13 @@ label.contact_members = Contact & Members
 label.documents = Documents
 label.discussion = Discussion
 label.recentActivity = Recent Activity
+label.sendsms= Send SMS
 label.contactUs = Contact Us 
 label.aboutUs = About Us
 label.siteMap = Site Map
+
+#SMS page
+label.chooseReceiver= Please choose receivers
 
 label.firstName = First Name
 label.lastName = Last Name
