--- a/WebContent/resources/i18n/messages_gu.properties
+++ b/WebContent/resources/i18n/messages_gu.properties
@@ -60,6 +60,10 @@ label.contact_members = \u0AB8\u0A82\u0AAA\u0AB0\u0ACD\u0A95\u0ACB & \u0AB8\u0AA
 label.documents = \u0AB5\u0ABF\u0AB5\u0ABF\u0A98  \u0AB5\u0ABF\u0A97\u0AA4\u0ACB
 label.discussion = \u0A9A\u0AB0\u0ACD\u0A9A\u0ABE
 label.recentActivity = \u0AB9\u0ABE\u0AB2\u0AA8\u0AC0 \u0AAA\u0ACD\u0AB0\u0AB5\u0AC3\u0AA4\u0ACD\u0AA4\u0ABF
+label.sendsms= SMS \u0AAE\u0ACB\u0A95\u0AB2\u0ACB
 label.contactUs = \u0A85\u0AAE\u0ABE\u0AB0\u0ACB \u0AB8\u0A82\u0AAA\u0AB0\u0ACD\u0A95 
 label.aboutUs = \u0A85\u0AAE\u0ABE\u0AB0\u0ABE \u0AB5\u0ABF\u0AB6\u0AC7
 label.siteMap = \u0AB8\u0ABE\u0A87\u0A9F \u0AAE\u0AC7\u0AAA
+
+#SMS Page
+label.chooseReceiver = \u0AB0\u0AC0\u0AB8\u0AC0\u0AB5\u0AB0\u0ACB \u0AAA\u0AB8\u0A82\u0AA6 \u0A95\u0AB0\u0ACB
