Cahnges Fro About US functionality

--- a/WebContent/resources/i18n/messages_en.properties
+++ b/WebContent/resources/i18n/messages_en.properties
@@ -69,5 +69,21 @@ label.siteMap = Site Map
 #SMS page
 label.chooseReceiver= Please choose receivers
 
+#About Us
+label.aboutus.line1 = Who we Are & Are't
+label.aboutus.line2 = Like we mention,This website is for songara family of Bolundra(songara) villagae.  
+label.aboutus.line3 = Having sole purpose is to serve information and update of family within a family members.
+label.aboutus.line4 = This website is not a social media(complete) for communication and information sharing.
+
+label.aboutus.line5 = Why We Are ON WWW ?
+label.aboutus.line6 = Because WWW is best possible solution to get in to roll.
+
+label.aboutus.line7 = Our Motto
+label.aboutus.line8 = Communicate with each single person without any physical and logical barrier and achieve hige degree of unitiy and prosperity.
+label.aboutus.line9 = For any suggestion or query please contact us on 
+label.aboutus.line10 = Mail Us 
+label.aboutus.line11 = Call Us 
+
+
 label.firstName = First Name
 label.lastName = Last Name
