--- a/WebContent/resources/i18n/messages_gu.properties
+++ b/WebContent/resources/i18n/messages_gu.properties
@@ -67,3 +67,18 @@ label.siteMap = \u0AB8\u0ABE\u0A87\u0A9F \u0AAE\u0AC7\u0AAA
 
 #SMS Page
 label.chooseReceiver = \u0AB0\u0AC0\u0AB8\u0AC0\u0AB5\u0AB0\u0ACB \u0AAA\u0AB8\u0A82\u0AA6 \u0A95\u0AB0\u0ACB
+
+#About Us
+label.aboutus.line1 = \u0A85\u0AAE\u0AC7 \u0A95\u0ACB\u0AA3 \u0A9B\u0AC0\u0A8F \u0A85\u0AA8\u0AC7 \u0A95\u0ACB\u0AA3 \u0AA8\u0AA5\u0AC0 ?
+label.aboutus.line2 = \u0A86 \u0AB5\u0AC7\u0AAC\u0AB8\u0ABE\u0A88\u0A9F \u0AAC\u0ACB\u0AB2\u0AC1\u0AA8\u0ACD\u0AA6\u0ACD\u0AB0\u0ABE(\u0AB8\u0ACB\u0AA8\u0A97\u0AB0\u0ABE) \u0A97\u0ABE\u0AAE \u0AA8\u0ABE \u0AB8\u0ACB\u0AA8\u0A97\u0AB0\u0ABE  \u0A95\u0AC1\u0A9F\u0AC1\u0A82\u0AAC \u0AAE\u0ABE\u0A9F\u0AC7 \u0A9B\u0AC7. 
+label.aboutus.line3 = \u0A9C\u0AC7\u0AA8\u0ACB \u0A8F\u0A95\u0AAE\u0ABE\u0AA4\u0ACD\u0AB0 \u0AB9\u0AC7\u0AA4\u0AC1 \u0AAA\u0AB0\u0ABF\u0AB5\u0ABE\u0AB0\u0AA8\u0ABE \u0AB8\u0AAD\u0ACD\u0AAF\u0ACB\u0AA8\u0AC0 \u0AAE\u0ABE\u0AB9\u0ABF\u0AA4\u0AC0 \u0A85\u0AA8\u0AC7  \u0A85\u0AAA\u0AA1\u0AC7\u0A9F \u0A86\u0AAA\u0AB5\u0ABE\u0AA8\u0AC0 \u0A9B\u0AC7.
+label.aboutus.line4 = \u0A86 \u0AB5\u0AC7\u0AAC\u0AB8\u0ABE\u0A88\u0A9F \u0AB8\u0A82\u0A9A\u0ABE\u0AB0 \u0A85\u0AA8\u0AC7 \u0AAE\u0ABE\u0AB9\u0ABF\u0AA4\u0AC0 \u0AB6\u0AC7\u0AB0\u0ABF\u0A82\u0A97 \u0AAE\u0ABE\u0A9F\u0AC7 \u0AB8\u0ACB\u0AB8\u0AC0\u0A85\u0AB2 \u0AAE\u0AC0\u0AA1\u0ABF\u0AAF\u0ABE(\u0AB8\u0A82\u0AAA\u0AC2\u0AB0\u0ACD\u0AA3) \u0AA8\u0AA5\u0AC0.
+
+label.aboutus.line5 = \u0AB6\u0ABE \u0AAE\u0ABE\u0A9F\u0AC7 \u0A85\u0AAE\u0AC7 WWW \u0AAA\u0AB0 ?
+label.aboutus.line6 = WWW \u0AB6\u0ACD\u0AB0\u0AC7\u0AB7\u0ACD\u0AA0 \u0AB6\u0A95\u0ACD\u0AAF \u0A89\u0A95\u0AC7\u0AB2 \u0A9B\u0AC7.
+
+label.aboutus.line7 = \u0A85\u0AAE\u0ABE\u0AB0\u0ACB \u0AA7\u0ACD\u0AAF\u0AC7\u0AAF
+label.aboutus.line8 = \u0A95\u0ACB\u0A88\u0AAA\u0AA3 \u0AAD\u0ACC\u0AA4\u0ABF\u0A95 \u0A85\u0AA8\u0AC7 \u0AB2\u0ACB\u0A9C\u0ABF\u0A95\u0AB2 \u0A85\u0AB5\u0AB0\u0ACB\u0AA7 \u0AB5\u0A97\u0AB0 \u0AA6\u0AB0\u0AC7\u0A95 \u0AB5\u0ACD\u0AAF\u0A95\u0ACD\u0AA4\u0ABF \u0AB8\u0ABE\u0AA5\u0AC7 \u0A9C\u0ACB\u0AA1\u0ABE\u0AB5\u0ABE\u0AA8\u0ACB \u0A85\u0AA8\u0AC7 \u0A89\u0AAE\u0AA6\u0ABE \u0A8F\u0A95\u0AA4\u0ABE \u0A85\u0AA8\u0AC7 \u0AB8\u0AAE\u0AC3\u0AA6\u0ACD\u0AA7\u0ABF \u0AAA\u0ACD\u0AB0\u0ABE\u0AAA\u0ACD\u0AA4 \u0A95\u0AB0\u0AB5\u0ABE\u0AA8\u0ACB.
+label.aboutus.line9 = \u0A95\u0ACB\u0A88\u0AAA\u0AA3 \u0AB8\u0AC2\u0A9A\u0AA8 \u0A95\u0AC7 \u0A95\u0ACD\u0AB5\u0AC7\u0AB0\u0AC0 \u0AAE\u0ABE\u0A9F\u0AC7 \u0AA8\u0AC0\u0A9A\u0AC7 \u0A86\u0AAA\u0AC7\u0AB2\u0AC0 \u0AB5\u0ABF\u0A97\u0AA4\u0ACB \u0AB8\u0A82\u0AAA\u0AB0\u0ACD\u0A95 \u0A95\u0AB0\u0ACB
+label.aboutus.line10 = \u0A88 \u0AAE\u0AC7\u0AB2
+label.aboutus.line11 = \u0AAB\u0ACB\u0AA8
