So Many Code Changes Related To UserManagement.

--- a/WebContent/resources/i18n/messages_en.properties
+++ b/WebContent/resources/i18n/messages_en.properties
@@ -7,6 +7,7 @@ label.login = Sign In
 label.signUp = Sign Up
 label.rememberMe = Remember me on this computer
 label.reset = Reset
+label.done = Done
 label.wrongUserNamePassword = Wrong Username/Password.
 label.jayMataji = Jay Mataji,
 label.enterUserName = 
