--- a/WebContent/resources/i18n/messages_gu.properties
+++ b/WebContent/resources/i18n/messages_gu.properties
@@ -7,6 +7,7 @@ label.login = \u0AB8\u0ABE\u0A87\u0AA8 \u0A87\u0AA8
 label.signUp = \u0AB8\u0ABE\u0A87\u0AA8 \u0A85\u0AAA
 label.rememberMe = \u0A86 \u0A95\u0AAE\u0ACD\u0AAA\u0ACD\u0AAF\u0AC1\u0A9F\u0AB0 \u0AAA\u0AB0 \u0AAE\u0AA8\u0AC7 \u0AAF\u0ABE\u0AA6 \u0AB0\u0ABE\u0A96\u0ACB
 label.reset =  \u0AB0\u0AC0\u0AB8\u0AC7\u0A9F
+label.done = \u0AAA\u0AC2\u0AB0\u0ACD\u0AA3
 label.wrongUserNamePassword =  \u0A96\u0ACB\u0A9F\u0AC0 \u0AB5\u0AAA\u0AB0\u0ABE\u0AB6\u0A95\u0AB0\u0ACD\u0AA4\u0ABE \u0AA8\u0ABE\u0AAE / \u0AAA\u0ABE\u0AB8\u0AB5\u0AB0\u0ACD\u0AA1
 label.jayMataji = \u0A9C\u0AAF \u0AAE\u0ABE\u0AA4\u0ABE\u0A9C\u0AC0,
 label.enterUserName = \u0AB5\u0AAA\u0AB0\u0ABE\u0AB6\u0A95\u0AB0\u0ACD\u0AA4\u0ABE \u0AA8\u0ABE\u0AAE \u0A87\u0A82\u0A97\u0AB2\u0ABF\u0AB6 \u0AAE\u0ABE\u0A82 \u0AA6\u0ABE\u0A96\u0AB2 \u0A95\u0AB0\u0ACB 
@@ -78,7 +79,7 @@ label.aboutus.line5 = \u0AB6\u0ABE \u0AAE\u0ABE\u0A9F\u0AC7 \u0A85\u0AAE\u0AC7 W
 label.aboutus.line6 = WWW \u0AB6\u0ACD\u0AB0\u0AC7\u0AB7\u0ACD\u0AA0 \u0AB6\u0A95\u0ACD\u0AAF \u0A89\u0A95\u0AC7\u0AB2 \u0A9B\u0AC7.
 
 label.aboutus.line7 = \u0A85\u0AAE\u0ABE\u0AB0\u0ACB \u0AA7\u0ACD\u0AAF\u0AC7\u0AAF
-label.aboutus.line8 = \u0A95\u0ACB\u0A88\u0AAA\u0AA3 \u0AAD\u0ACC\u0AA4\u0ABF\u0A95 \u0A85\u0AA8\u0AC7 \u0AB2\u0ACB\u0A9C\u0ABF\u0A95\u0AB2 \u0A85\u0AB5\u0AB0\u0ACB\u0AA7 \u0AB5\u0A97\u0AB0 \u0AA6\u0AB0\u0AC7\u0A95 \u0AB5\u0ACD\u0AAF\u0A95\u0ACD\u0AA4\u0ABF \u0AB8\u0ABE\u0AA5\u0AC7 \u0A9C\u0ACB\u0AA1\u0ABE\u0AB5\u0ABE\u0AA8\u0ACB \u0A85\u0AA8\u0AC7 \u0A89\u0AAE\u0AA6\u0ABE \u0A8F\u0A95\u0AA4\u0ABE \u0A85\u0AA8\u0AC7 \u0AB8\u0AAE\u0AC3\u0AA6\u0ACD\u0AA7\u0ABF \u0AAA\u0ACD\u0AB0\u0ABE\u0AAA\u0ACD\u0AA4 \u0A95\u0AB0\u0AB5\u0ABE\u0AA8\u0ACB.
+label.aboutus.line8 = \u0AA6\u0AB0\u0AC7\u0A95 \u0AB5\u0ACD\u0AAF\u0A95\u0ACD\u0AA4\u0ABF \u0AB8\u0ABE\u0AA5\u0AC7 \u0A9C\u0ACB\u0AA1\u0ABE\u0AB5\u0ABE\u0AA8\u0ACB \u0A85\u0AA8\u0AC7 \u0A89\u0AAE\u0AA6\u0ABE \u0A8F\u0A95\u0AA4\u0ABE \u0A85\u0AA8\u0AC7 \u0AB8\u0AAE\u0AC3\u0AA6\u0ACD\u0AA7\u0ABF \u0AAA\u0ACD\u0AB0\u0ABE\u0AAA\u0ACD\u0AA4 \u0A95\u0AB0\u0AB5\u0ABE\u0AA8\u0ACB.
 label.aboutus.line9 = \u0A95\u0ACB\u0A88\u0AAA\u0AA3 \u0AB8\u0AC2\u0A9A\u0AA8 \u0A95\u0AC7 \u0A95\u0ACD\u0AB5\u0AC7\u0AB0\u0AC0 \u0AAE\u0ABE\u0A9F\u0AC7 \u0AA8\u0AC0\u0A9A\u0AC7 \u0A86\u0AAA\u0AC7\u0AB2\u0AC0 \u0AB5\u0ABF\u0A97\u0AA4\u0ACB \u0AB8\u0A82\u0AAA\u0AB0\u0ACD\u0A95 \u0A95\u0AB0\u0ACB
 label.aboutus.line10 = \u0A88 \u0AAE\u0AC7\u0AB2
 label.aboutus.line11 = \u0AAB\u0ACB\u0AA8
